# OlicanaPlot

./: .gitignore  README.md  Taskfile.yml  build.bat  go.mod  go.sum  main.go
docs/: IPC_PROTOCOL.md  ipc-schema.json
frontend/: biome.json  csv-dialog.html  dialog-theme.css  dialog.html  index.html  options.html  package-lock.json  package.json  synthetic-dialog.html  tsconfig.json  vite.config.js
frontend/public/: style.css
frontend/src/: App.svelte  OptionsWindow.svelte  dialog.js  dialog.ts  main.js  main.ts  options.js  options.ts  plot-theme.css  theme.css
internal/appconfig/: service.go
internal/data/: middleware.go
internal/funceval/: funceval.go  funceval_test.go
internal/logging/: logger.go
internal/plugins/: manager.go  plugin.go  service.go  sync_test.go
pkg/ipcplugin/: protocol.go
plugins/csv/: build.bat  go.mod  main.go
plugins/csv_reader/: build.bat  generate_samples.py  go.mod  main.go  main_test.go
plugins/model_selector/: go.mod  main.go
plugins/msc-climate-data/: ipc_helpers.py  main.py  msc_api.py  olicana-plot-plugin.json  pyproject.toml
plugins/olicanaplot_reader/: FORMAT.md  generate_sample.py  generate_sample_dates.py  go.mod  main.go  test_data.olicanaplot  test_date_data.olicanaplot
plugins/open_meteo_climate_downloader/: .gitignore  README.md  cache.py  history.py  main.py  olicana-plot-plugin.json  open_meteo.py  pyproject.toml
plugins/random_walk_generator/: build.bat  main.cpp
plugins/synthetic_data_generator/: README.md  Taskfile.yml  go.mod  (+1 more)
sample_data/: generate_samples.py  sample_1.csv  sample_2.csv
(+52 files in other folders)
