[project]
name = "msc-climate-data"
version = "0.1.0"
description = "MSC GeoMet Climate Data Plugin for OlicanaPlot"
dependencies = ["httpx>=0.27.0"]
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[dependency-groups]
dev = ["ruff"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN", "B", "SIM"]
