[project]
name = "msc-climate-data"
version = "0.1.0"
description = "MSC GeoMet Climate Data Plugin for OlicanaPlot"
dependencies = ["httpx>=0.27.0"]
requires-python = ">=3.10"

[tool.ruff]
# Target Python version 3.10
target-version = "py310"
# Maximum line length of 100 characters
line-length = 80

[dependency-groups]
dev = ["ruff"]

[tool.ruff.lint]
# Select specific linting rule sets:
# E   - pycodestyle errors
# F   - Pyflakes
# I   - isort (import sorting)
# UP  - pyupgrade (modernize Python)
# ANN - flake8-annotations (type hints)
# B   - flake8-bugbear (design flaws)
# SIM - flake8-simplify (simplify logic)
select = ["E", "F", "I", "UP", "ANN", "B", "SIM"]
